# apple_gripper

./: .gitignore  README.md
gripper/: CMakeLists.txt  package.xml
gripper/Current and Force/: desired_force_test.py  visualize1.py  visualize2.py
gripper/config/: LFD_scene_geometry.scene  rviz_playback_config.rviz  rviz_world_config.rviz
gripper/gripper/: IMU_serial.py  LFD.py  air_functions.py  apple_attach.py  arm_control.py  force_torque_sensor.py  function_tester.py  grasp_controller.py  optitrack.py  psuedo_main.py  user.py  (+4 more)
gripper_msgs/: CMakeLists.txt
lfd_data_collection/: CMakeLists.txt  package.xml
lfd_data_collection/data/bags/: where_is_the_data.txt
lfd_data_collection/data/force_current/: visualize1.py  visualize2.py
lfd_data_collection/data/optitrack/: Take 2024-08-16 01.03.08 PM.csv  Take 2024-08-16 11.33.48 AM.csv  Take 2024-08-16 11.37.55 AM.csv  Take 2024-08-16 11.40.37 AM.csv  Take 2024-08-16 11.45.41 AM.csv  Take 2024-08-16 11.50.01 AM.csv  Take 2024-08-16 11.54.49 AM.csv  Take 2024-08-16 12.00.25 AM.csv  Take 2024-08-16 12.02.44 AM.csv  Take 2024-08-16 12.26.00 AM.csv  Take 2024-08-16 12.32.59 AM.csv  Take 2024-08-16 12.34.34 AM.csv  Take 2024-08-16 12.35.38 AM.csv  Take 2024-08-16 12.36.54 AM.csv  Take 2024-08-16 12.37.48 AM.csv  Take 2024-08-16 12.56.27 AM.csv  Take 2024-08-16 12.58.48 AM.csv  test4.csv
lfd_data_collection/launch/: data_collection_launch.py  data_playback_launch.py
lfd_data_collection/lfd_data_collection/: LFD.py  apple_attach.py  force_torque_sensor.py  optitrack.py
lfd_data_collection/src/: moveit_playback.cpp
(+42 files in other folders)
