<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lfd_data_collection</name>
  <version>0.0.0</version>
  <description>Data collection system for learning from demonstration for a robot arm apple pick pattern.</description>
  <maintainer email="jkarty3@elon.edu">jacob</maintainer>
  <license>Apache license 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>gripper_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
